--- a/AD_JAN24.ipynb
+++ b/AD_JAN24.ipynb
@@ -1838,7 +1838,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 434,
+          "height": 414,
           "referenced_widgets": [
             "ab52ab785cf84736b557c6fa18968f20",
             "09b96bd9b01a4259a0aa3357303986cd",
@@ -2714,7 +2714,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 606
+          "height": 625
         },
         "id": "5-cBopVzRcjM",
         "outputId": "c7cdff21-a89d-4887-e463-c934dbe0b52c"
@@ -2775,7 +2775,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 776
+          "height": 1000
         },
         "id": "IorQ_2v8SnG7",
         "outputId": "b27b3ce5-ab07-4d3c-f690-9ff07b7574f6"
@@ -3338,6 +3338,172 @@
         "id": "6QeToFldDX4N"
       },
       "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "from torchvision import transforms, models\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import (\n",
+        "    accuracy_score,\n",
+        "    precision_recall_fscore_support,\n",
+        "    roc_auc_score,\n",
+        "    matthews_corrcoef,\n",
+        "    confusion_matrix\n",
+        ")\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from PIL import Image\n",
+        "\n",
+        "# Same AlzheimerDataset and AlzheimerClassifier classes as before\n",
+        "\n",
+        "def train_and_evaluate(all_images, all_labels, test_size=0.2, random_state=42):\n",
+        "    # Split the data into train and test sets\n",
+        "    train_images, test_images, train_labels, test_labels = train_test_split(\n",
+        "        all_images, all_labels, test_size=test_size, random_state=random_state, stratify=all_labels\n",
+        "    )\n",
+        "\n",
+        "    # Data preparation\n",
+        "    train_dataset = AlzheimerDataset(train_images, train_labels)\n",
+        "    test_dataset = AlzheimerDataset(test_images, test_labels)\n",
+        "\n",
+        "    train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+        "    test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
+        "\n",
+        "    # Model, loss, and optimizer\n",
+        "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "    model = AlzheimerClassifier().to(device)\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "    optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
+        "\n",
+        "    # Training (rest of the code remains the same as in previous artifact)\n",
+        "    epochs = 50\n",
+        "    train_losses, train_accuracies = [], []\n",
+        "\n",
+        "    for epoch in range(epochs):\n",
+        "        model.train()\n",
+        "        total_loss, total_correct = 0, 0\n",
+        "\n",
+        "        for images, labels in train_loader:\n",
+        "            images, labels = images.to(device), labels.to(device)\n",
+        "\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(images)\n",
+        "            loss = criterion(outputs, labels)\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "\n",
+        "            total_loss += loss.item()\n",
+        "            total_correct += (outputs.argmax(1) == labels).sum().item()\n",
+        "\n",
+        "        train_loss = total_loss / len(train_loader)\n",
+        "        train_accuracy = total_correct / len(train_dataset)\n",
+        "\n",
+        "        train_losses.append(train_loss)\n",
+        "        train_accuracies.append(train_accuracy)\n",
+        "\n",
+        "        print(f'Epoch {epoch+1}/{epochs}, Loss: {train_loss:.4f}, Accuracy: {train_accuracy:.4f}')\n",
+        "\n",
+        "    # Evaluation\n",
+        "    model.eval()\n",
+        "    all_preds, all_labels = [], []\n",
+        "\n",
+        "    with torch.no_grad():\n",
+        "        for images, labels in test_loader:\n",
+        "            images, labels = images.to(device), labels.to(device)\n",
+        "            outputs = model(images)\n",
+        "            preds = outputs.argmax(1)\n",
+        "\n",
+        "            all_preds.extend(preds.cpu().numpy())\n",
+        "            all_labels.extend(labels.cpu().numpy())\n",
+        "\n",
+        "    # Compute metrics\n",
+        "    accuracy = accuracy_score(all_labels, all_preds)\n",
+        "    precision, recall, f1, _ = precision_recall_fscore_support(all_labels, all_preds, average='weighted')\n",
+        "\n",
+        "    try:\n",
+        "        auc = roc_auc_score(\n",
+        "            torch.nn.functional.one_hot(torch.tensor(all_labels)).numpy(),\n",
+        "            torch.nn.functional.softmax(torch.tensor(outputs), dim=1).cpu().numpy(),\n",
+        "            multi_class='ovr'\n",
+        "        )\n",
+        "    except:\n",
+        "        auc = None\n",
+        "\n",
+        "    mcc = matthews_corrcoef(all_labels, all_preds)\n",
+        "\n",
+        "    # Confusion Matrix and Training Metrics Plotting (same as before)\n",
+        "\n",
+        "    # Return detailed metrics\n",
+        "    return {\n",
+        "        'accuracy': accuracy,\n",
+        "        'precision': precision,\n",
+        "        'recall': recall,\n",
+        "        'f1_score': f1,\n",
+        "        'auc': auc,\n",
+        "        'mcc': mcc\n",
+        "    }\n",
+        "\n",
+        "# Main execution remains the same\n",
+        "def main():\n",
+        "    metrics = train_and_evaluate(all_images, all_labels)\n",
+        "\n",
+        "    print(\"\\nModel Evaluation Metrics:\")\n",
+        "    for metric, value in metrics.items():\n",
+        "        print(f\"{metric.upper()}: {value}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
+      ],
+      "metadata": {
+        "id": "8AVyPVe6DrkE",
+        "outputId": "69bfc87c-295c-4cd0-c2c1-9e5d19273251",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 428
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.11/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
+            "  warnings.warn(msg)\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-90c42471f09b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    116\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 118\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-12-90c42471f09b>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[0;31m# Main execution remains the same\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 111\u001b[0;31m     \u001b[0mmetrics\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_and_evaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\nModel Evaluation Metrics:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-12-90c42471f09b>\u001b[0m in \u001b[0;36mtrain_and_evaluate\u001b[0;34m(all_images, all_labels, test_size, random_state)\u001b[0m\n\u001b[1;32m     56\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m             \u001b[0mtotal_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m             \u001b[0mtotal_correct\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AlWaf7BBD5ot"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
